--- a/media/css/firefox/developer.less
+++ b/media/css/firefox/developer.less
@@ -90,9 +90,10 @@
     }
 }
 
-.android {
+.android,
+.ios {
     .download-button {
-        // hide download button on Android until download button is smarter
+        // hide download button on Android and iOS until download button is smarter
         display: none;
     }
     .intro h2 {
