--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -299,7 +299,6 @@ html[lang^='en'] {
 
 // Product download buttons
 
-.download-button .ios-download,
 .download-button .linux-arm-download,
 .download-button .unrecognized-download,
 .download-button .unsupported-download {
@@ -583,18 +582,19 @@ html[lang^='en'] {
 // Uncomment this to enable the win64 download buttons:
 // .win7up.x86.x64 .download-button-aurora .os_win,
 .android .download-button-desktop,
+.ios .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
 .linux.x86.x64 .download-list .os_linux,
 .download-button .os_win,
 .download-button .os_osx,
 .download-button .os_android,
+.download-button .os_ios,
 .no-js .download-list,
 .other .download-list {
     display: none !important;
 }
 
-.ios .download-button .ios-download,
 // Uncomment this to enable the win64 download buttons:
 // .win7up.x86.x64 .download-button-aurora .os_win64,
 .linux .download-button .os_linux,
@@ -602,11 +602,17 @@ html[lang^='en'] {
 .windows .download-button .os_win,
 .osx .download-button .os_osx,
 .android .download-button .os_android,
+.ios .download-button .os_ios,
 .download-button-android .os_android,
+.download-button-ios .os_ios,
 .android .download-button-desktop .download-list,
+.ios .download-button-desktop .download-list,
 .android .download-button-desktop small.os_win,
+.ios .download-button-desktop small.os_win,
 .no-js .download-button-android .download-list,
+.no-js .download-button-ios .download-list,
 .other .download-button-android .download-list,
+.other .download-button-ios .download-list,
 .other .download-button small.os_win {
     display: block !important;
 }
@@ -623,7 +629,9 @@ html[lang^='en'] {
 
 .download-button small.download-other,
 .other .download-button-android small.download-other,
-.android .download-button-desktop small.download-other {
+.other .download-button-ios small.download-other,
+.android .download-button-desktop small.download-other,
+.ios .download-button-desktop small.download-other {
     .open-sans;
     display: block;
     .font-size(11px);
@@ -639,12 +647,14 @@ html[lang^='en'] {
 
 .no-js .download-button small.download-other,
 .other .download-button small.download-other,
-.android .download-button-desktop small.download-other {
+.android .download-button-desktop small.download-other,
+.ios .download-button-desktop small.download-other {
     text-align: left;
 }
 
 .other .download-button,
-.android .download-button-desktop {
+.android .download-button-desktop,
+.ios .download-button-desktop {
     .unrecognized-download {
         display: block;
     }
@@ -674,17 +684,12 @@ html[lang^='en'] {
 
 }
 
-// ios tweaks
-
-.ios-download a:before {
-    content: '\A';
-    white-space: pre;
-}
-
 // Mobile download buttons
 
 .download-button .download-list .os_android,
-.download-button-android {
+.download-button .download-list .os_ios,
+.download-button-android,
+.download-button-ios {
     .download-link {
        .download-title {
             padding-top: 0;
@@ -708,7 +713,9 @@ html[lang^='en'] {
 }
 
 .download-button.download-button-small .download-list .os_android,
-.download-button.download-button-small.download-button-android {
+.download-button.download-button-small .download-list .os_ios,
+.download-button.download-button-small.download-button-android,
+.download-button.download-button-small.download-button-ios {
     .download-link {
        .download-title {
             padding-top: 0;
